--- a/_includes/download_form.html
+++ b/_includes/download_form.html
@@ -5,7 +5,7 @@
 
     
     <head>
-        <title>EEG/MEG Modeling Toolbox v1.0-Prelim.</title>
+        <title>TES Modeling Toolbox v1.0-Prelim.</title>
     </head>
     
     <style>
@@ -75,7 +75,7 @@ img{
 
     <body>
         
-        <h1> <center> Software Toolkit for EEG and MEG Modeling Using Boundary Element Fast Multipole Method </center></h1>
+        <h1> <center> Software Toolkit for TES Modeling Using Boundary Element Fast Multipole Method </center></h1>
         
         <img src = "https://raw.githubusercontent.com/TMSCoreLab/EEG_MEG-Modeling-Website/master/figure06.png" alt = "a) Elementary cortical dipoles placed between the gray matter surface and white matter surface within the region indicated in (b). b) Blue sphere on the gray matter surface indicates the position of the cluster of dipoles in (a). c) EEG response (Volts) arising from the dipole configuration in (a) viewed on the skin surface. d) MEG response (pico-teslas) arising from the dipole configuration in (a) viewed on the skin surface. e) Coregistration of head model against original MRI data in the sagittal plane.  Small pink circles are drawn at locations on the scalp that experience strong EEG/MEG fields. f) Contour plot of potential (micro-volts) in the region subtended by the white box in (e).">
         <div class="container">
@@ -93,7 +93,8 @@ img{
                 <input type="text" name="affiliation" placeholder = "Your affiliation" required>
                 
                 https://github.com/TMSCoreLab/EEG_MEG-Modeling-Website/blob/master/Terms%20and%20Conditions.md
-                <label for="cbox">I have read and agree to the <a href="https://tmscorelab.github.io/EEG_MEG-Modeling-Website/Terms%20and%20Conditions.html">Terms and Conditions</a></label>
+                <label for="cbox">I have read and agree to the <a href="https://tmscorelab.github.io/TES-Modeling-Website/Terms%20and%20Conditions.html">Terms and Conditions</a></label>
+                <!--<label for="cbox">I have read and agree to the <a href="https://tmscorelab.github.io/EEG_MEG-Modeling-Website/Terms%20and%20Conditions.html">Terms and Conditions</a></label>-->
                 <!--<label for="cbox">I have read and agree to the <a href="https://tmscorelab.github.io/TMS-Modeling-Website/Terms%20and%20Conditions.html">Terms and Conditions</a></label>-->
                 <input type="checkbox" name="checkbox" value="check" id="agree" required>
                 
